--- a/9a/9820a.html
+++ b/9a/9820a.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Lapan Dua Kosong</title>
+    <meta name="referrer" content="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
