--- a/1/2112.html
+++ b/1/2112.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<meta name="referrer" content="no-referrer" />
 	<title>Satu Satu Dua</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
@@ -27,7 +28,7 @@
             player.configure({
                 drm: {
                     "clearKeys": {
-                        '784c6037e5888e84106e41059fe2b110': '8e4200bf5c4d523ff00bfd173d021602'
+                        '784c6037e5888e84106e41059fe2b110': 'jkIAv1xNUj/wC/0XPQIWAg'
                     }
                 }
             });
