--- a/4/4310.html
+++ b/4/4310.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="referrer" content="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
@@ -15,7 +16,7 @@
         </div>
     </center>
     <script>
-        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/linear/2600/default_primary.mpd";
+        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/linear/2600/default.mpd";
         async function init() {
             const video = document.getElementById('video');
             const ui = video['ui'];
