--- a/4/4319.html
+++ b/4/4319.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="referrer" content="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
@@ -26,7 +27,7 @@
             player.configure({
                 drm: {
                     "clearKeys": {
-                        'e36e0cbdef0677b48dba5c63e8caaf10':'ecfb454b2f3e238c5b5dc196e4f91fb8'
+                        'e36e0cbdef0677b48dba5c63e8caaf10': 'ecfb454b2f3e238c5b5dc196e4f91fb8'
                     }
                 }
             });
