--- a/9b/9795.html
+++ b/9b/9795.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-    <title>Tujuh Sembilan Lima</title>
+    <meta name="referrer" content="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
-<body bgcolor='grey' style='margin:0'>
+<body bgcolor='black' style='margin:0'>
 </script>
 </head>
 
@@ -16,7 +16,7 @@
         </div>
     </center>
     <script>
-        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/linear/9986/default_primary.mpd";
+        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/linear/9986/default.mpd";
         async function init() {
             const video = document.getElementById('video');
             const ui = video['ui'];
