--- a/9b/9796.html
+++ b/9b/9796.html
@@ -1,11 +1,11 @@
 <html>
 
 <head>
-    <title>Tujuh Sembilan Enam</title>
+    <meta name="referrer" content="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
-<body bgcolor='grey' style='margin:0'>
+<body bgcolor='black' style='margin:0'>
 </script>
 </head>
 
