--- a/3/3306.html
+++ b/3/3306.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="referrer" content="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
@@ -15,7 +16,7 @@
         </div>
     </center>
     <script>
-        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/dashiso/2400/default.mpd";
+        const manifestUri = "https://linears-playback.astro.com.my/vsgN/41xB9XItVsSi_aY-Km766BzbDKGgaKdpb0pVoyQgZl_y0=l78d/dash-wv/jitp-dashisowm/2400/default.mpd";
         async function init() {
             const video = document.getElementById('video');
             const ui = video['ui'];
