--- a/9b/9814.html
+++ b/9b/9814.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Lapan Satu Empat</title>
+    <meta name="referrer" content="no-referrer" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
@@ -16,7 +16,7 @@
         </div>
     </center>
     <script>
-        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/linear/2506/default.mpd";
+        const manifestUri = "https://linearjitp-playback.astro.com.my/hls-mp4-fp/linear/2506/default.m3u8";
         async function init() {
             const video = document.getElementById('video');
             const ui = video['ui'];
