--- a/0/t0001.html
+++ b/0/t0001.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <meta name="referrer" content="no-referrer"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/shaka-player.ui.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.3.6/controls.min.css" crossorigin="anonymous" />
 </script>
@@ -15,7 +16,7 @@
         </div>
     </center>
     <script>
-        const manifestUri = "https://production-drm-vidio-com-plcs.akamaized.net/out/v1/323e0081ae1e471194808db88b86c5de/index.mpd";
+        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/linear/711/default_primary.mpd";
         async function init() {
             const video = document.getElementById('video');
             const ui = video['ui'];
@@ -26,7 +27,7 @@
             player.configure({
                 drm: {
                     "clearKeys": {
-                        'b6f0ec073a7aba8cac61cd44fd78bf3f': 'c1ae5fbd637e0f212bf36f7614b629c9'
+                        '17fbade6a94f5271a6a7c56374bf6d8e': '5262cbebead64f42aa8317e3cb13106c'
                     }
                 }
             });
