--- a/u/8604.html
+++ b/u/8604.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='https://basikaltuaku.github.io/'" />
+    <meta http-equiv="refresh" content="7; url='http://free-tivi.000.pe'" />
   </head>
   <body>
-    <p>The Cycle Repeated!</p>
+    <p>Wait</p>
   </body>
 </html>
