--- a/u/8604.html
+++ b/u/8604.html
@@ -4,6 +4,6 @@
     <meta http-equiv="refresh" content="7; url='http://free-tivi.000.pe'" />
   </head>
   <body>
-    <p>Wait 7 Sec.. Note: FOR PC USER ONLY! USE FIREFOX!</p>
+    <p>Please wait 7 Sec.......</p>
   </body>
 </html>
