--- a/0/2121.html
+++ b/0/2121.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <HTML>
 <head>
-<script src="https://content.jwplatform.com/libraries/Z79JsmAO.js"></script>
+<script src="https://basikaltuaku.github.io/0/Z79JsmAO.js"></script>
 <div id="jwplayerDiv"></div>
 <script>	
 jwplayer("jwplayerDiv").setup({
