--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="7; url='http://free-tivi.000.pe'" />
+    <meta http-equiv="refresh" content="7; url='https://basikaltuaku.github.io/u/8604'" />
   </head>
   <body>
     <p>Please wait 7 Sec.......</p>
