--- a/u/8604.html
+++ b/u/8604.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
     <title>Kata-kata yang membunuh.</title>
+    <link rel="icon" href="https://th.bing.com/th/id/OIP.RIBTQ9KjfOEFZ1qvrIEMMQAAAA?pid=ImgDet&rs=1" type="image/icon type">
     <style>
         html, body {
             margin: 0;
