--- a/u/8604.html
+++ b/u/8604.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
     <title>Kata-kata yang membunuh.</title>
-    <link rel="icon" href="https://th.bing.com/th/id/OIP.RIBTQ9KjfOEFZ1qvrIEMMQAAAA?pid=ImgDet&rs=1" type="image/icon type">
+    <link rel="icon" href="https://storage.ko-fi.com/cdn/useruploads/display/c68f3691-a6dc-4c9e-a0bf-75e13a0cc962_totklink.gif" type="image/icon type">
     <style>
         html, body {
             margin: 0;
