--- a/1/2112.html
+++ b/1/2112.html
@@ -17,7 +17,7 @@
         </div>
     </center>
     <script>
-        const manifestUri = "https://linearjitp-playback.astro.com.my/dash-wv/linear/608/default_primary.mpd";
+        const manifestUri = "https://linearjitp02-playback.astro.com.my/dash-wv/linear/608/default_ott.mpddefault_primary.mpd";
         async function init() {
             const video = document.getElementById('video');
             const ui = video['ui'];
