--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   </head>
   <body>
     <p>Please wait 7 Sec.......</p>
-    <p hidden>This paragraph should be hidden. #EXTM3U url-tvg="https://raw.githubusercontent.com/AqFad2811/epg/main/epg.xml,https://raw.githubusercontent.com/AqFad2811/epg/main/unifitv.xml,https://raw.githubusercontent.com/AqFad2811/epg/main/astro.xml" refresh="3600"
+    <p hidden>This paragraph should be hidden.
+      
+#EXTM3U url-tvg="https://raw.githubusercontent.com/AqFad2811/epg/main/epg.xml,https://raw.githubusercontent.com/AqFad2811/epg/main/unifitv.xml,https://raw.githubusercontent.com/AqFad2811/epg/main/astro.xml" refresh="3600"
 
 __________________________________________________________________________________________________________________________________
 
