--- a/u/8604.html
+++ b/u/8604.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="noindex, nofollow">
-    <title>Password Protected Page</title>
+    <title>Kata-kata yang membunuh</title>
     <style>
         html, body {
             margin: 0;
